# 2015_structured_indoor_modeling

./: .gitignore  Makefile  delete_files.sh  run.sh  run_texture_for_poisson_vgcut.sh  script.sh
base/: detection.cc  detection.h  file_io.h  floorplan.cc  floorplan.h  floorplan_internal.h  geometry.cc  geometry.h  imageProcess  indoor_polygon.cc  indoor_polygon.h  mrf  panorama.cc  panorama.h  ply  point_cloud.cc  point_cloud.h
base/imageProcess/: line.cc.cpp  line.h  line3.cc.cpp  line3.h  lineExtracter.cc.cpp  lineExtracter.h  patch2d.h  (+11 more)
calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  align_images.cc  align_images.h  align_images_cli  align_images_cli.cc  align_panorama_to_depth_cli  align_panorama_to_depth_cli.cc  alignment_batch.m  cmake_install.cmake  depthmap_refiner.cc  depthmap_refiner.h  file_io.h  file_io.h~  generate_depthmaps_cli.cc  render_ply_to_panorama_cli  render_ply_to_panorama_cli.cc  simple_read_ply.m  transformation.cc  transformation.h
evaluation/: CMakeLists.txt  evaluate.cc  evaluate.h  evaluate_cli.cc  evaluate_floorplan_cli.cc
floorplan/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  floorplan.cc  floorplan.h  floorplan_generation_cli  floorplan_generation_cli.cc  floorplan_generation_cli.cc~  floorplan_internal.h  floorplan_util.cc  floorplan_util.h  generate_floorplan_cli.cc  generate_thumbnail_cli.cc  panorama.cc  panorama.cc~  panorama.h  panorama.h~  polygon_triangulation2.cc
floorplan/old/: floorplan.h.bak  sample.cc
main_process/: Makefile
main_process/object_refinement/: CMakeCache.txt  CMakeLists.txt  Makefile  Object_refinement  SLIC.h  depth_filling.cpp  depth_filling.h  object_refinement.cpp  object_refinement.h  object_refinement_cali.cpp
main_process/object_refinement/SLIC/: SLIC.cpp
main_process/object_segmentation/: CMakeLists.txt  object_segmentation.cc  object_segmentation.h  object_segmentation_cli.cc
object_detection/: CMakeLists.txt  detection.cc  detection.h  generate_object_icons.cc  generate_object_icons.h  generate_object_icons_cli.cc
object_hole_filling/: #CMakeList#  #SLIC.h#  CMakeCache.txt  CMakeList  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  PictureHandler.cpp  PictureHandler.h  SLIC.cpp  SLIC.cpp~  SLIC.h  SLIC_cali.cpp~  cmake_install.cmake  depth_filling.cpp  depth_filling.h  object_hole_filling.cpp  object_hole_filling.cpp~  object_hole_filling.h  object_hole_filling.h~  object_hole_filling_cali.cpp  object_hole_filling_cali.cpp~
object_segmentation/: CMakeLists.txt  object_segmentation.cc  object_segmentation.h  object_segmentation_cli.cc
post_process/: Makefile
post_process/collada/: CMakeLists.txt  indoor_polygon_to_dae_cli.cc
post_process/collada/ming/: FloorPlanInRhino3D.py  ToDraw.py  ToDraw_red.py  blueprint_poly.txt  blueprint_poly_red.txt  innerwall_poly.txt
post_process/evaluation/: CMakeLists.txt  evaluate.cc  evaluate.h  evaluate_cli.cc  prepare_poisson_cli.cc  run_synthetic.sh
post_process/synthetic/: CMakeLists.txt  generate_synthetic_data_cli.cc
pre_process/: Makefile
pre_process/calibration/: CMakeLists.txt  align_images.h  align_images_cli.cc  align_panorama_to_depth_cli.cc  alignment.m  depthmap_refiner.h  generate_depthmaps_cli.cc  render_ply_to_panorama_cli.cc  transformation.cc
pre_process/stitch_panorama/: CMakeLists.txt  stitch_panorama.cc  stitch_panorama.h  stitch_panorama_cli.cc
pre_process/stitch_panorama/data/: IMU_rotation.txt  K.txt
pre_process/stitch_panorama/data/images/: img_to_frame.txt
segmentation/: .qmake.stash  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  data.cc  data.cc~  data.h  door_detection.cc  door_detection.h  door_detection_cli.cc  door_detection_cli.sh  dynamic_programming.cc  evidence.cc  evidence.cc~  evidence.h  evidence.h~  preprocess.cc  preprocess.h  preprocess_cli.cc  reconstruct_2d.cc  reconstruct_2d.h  reconstruct_2d.robust.cc  reconstruct_2d_direct_gradient_fail.cc  refine_segmentation.cc  refine_segmentation.h  refine_segmentation_cli.cc  segmentation.cc  segmentation.cc~  segmentation.h  segmentation.h~  segmentation_cli  segmentation_cli.cc  transform.cc  transform.h
segmentation/old/: Makefile  door_detection_cli.sh
segmentation/segmentation.app/Contents/: Info.plist
segmentation_old/: cluster_00.ppm  cluster_01.ppm  cluster_02.ppm  cluster_03.ppm  cluster_04.ppm  cluster_05.ppm  cluster_06.ppm  cluster_07.ppm  cluster_08.ppm  cluster_09.ppm  cluster_10.ppm  cluster_11.ppm  cluster_12.ppm  cluster_13.ppm  cluster_14.ppm  cluster_15.ppm  cluster_16.ppm  cluster_17.ppm  cluster_18.ppm  cluster_19.ppm  cluster_20.ppm  door_detection.cc  door_detection_cli  door_detection_cli.cc  refine_segmentation_cli
synthetic/: generate_synthetic_data_cli.cc
texture/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_point_cloud_cli  color_point_cloud_cli.cc  generate_texture.cc  generate_texture.h  generate_texture.h~  generate_texture_cli  generate_texture_cli.cc  generate_texture_cli.cc~  generate_texture_floorplan.cc  generate_texture_floorplan.h  generate_texture_floorplan_cli.cc  generate_texture_indoor_polygon.cc  generate_texture_indoor_polygon.h  generate_texture_indoor_polygon_cli.cc  generate_thumbnail_cli.cc  run.sh  synthesize.cc  synthesize.h
viewer/: .qmake.stash  Makefile  configuration.cc  configuration.h  floorplan_renderer.cc  floorplan_renderer.h  fshader.glsl  indoor_polygon_renderer.cc  indoor_polygon_renderer.h  lumber.configuration  lumber.configuration.mac  lumber.configuration.mac2  main_widget.cc  main_widget.h  main_widget_render.cc  main_widget_render.h  main_widget_util.cc  main_widget_util.h  moc_main_widget.cpp  navigation.cc  navigation.h  object_renderer.cc  object_renderer.cc~  object_renderer.h  object_renderer.h~  panel_renderer.cc  panel_renderer.h  panorama.cc  panorama.h  panorama_fshader.glsl  panorama_renderer.cc  panorama_renderer.h  panorama_vshader.glsl  polygon_renderer.cc  polygon_renderer.h  qrc_shaders.cpp  red_lion.configuration  red_lion.configuration~  shaders.qrc  tree_organizer.cc  (+6 more)
(+62 files in other folders)
